Updated Config